Added failure status checks to experiment tracking

--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -46,6 +46,7 @@
     "import socket\n",
     "import tempfile\n",
     "import time\n",
+    "import traceback as tb\n",
     "import uuid\n",
     "from pathlib import Path\n",
     "\n",
@@ -57,13 +58,7 @@
     "from sacred.stdout_capturing import get_stdcapturer\n",
     "from sacred.utils import IntervalTimer\n",
     "\n",
-    "from sciflow.s3_utils import (\n",
-    "    delete_dir,\n",
-    "    list_bucket,\n",
-    "    load_json,\n",
-    "    put_data,\n",
-    "    s3_join,\n",
-    ")\n",
+    "from sciflow.s3_utils import delete_dir, list_bucket, load_json, put_data, s3_join\n",
     "from sciflow.utils import prepare_env"
    ]
   },
@@ -83,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_base_key = \"sciflow-testing-unlikely-existing-key\"\n",
+    "flow_base_key = \"sciflow-testing-unlikely-key\"\n",
     "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())}\"\n",
     "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
     "s3_res = boto3.resource(\"s3\")\n",
@@ -173,7 +168,9 @@
     "# export\n",
     "\n",
     "\n",
-    "def _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, event_status):\n",
+    "def _tracking_event(\n",
+    "    s3_res, bucket_name, flow_base_key, flow_run_id, event_status, except_info=None\n",
+    "):\n",
     "    run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
     "    run_entry = load_json(s3_res, bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
     "    run_entry[\"status\"] = event_status\n",
@@ -181,6 +178,10 @@
     "    run_entry[\"elapsed_time\"] = round(\n",
     "        run_entry[\"stop_time\"] - run_entry[\"start_time\"], 2\n",
     "    )\n",
+    "    if except_info is not None:\n",
+    "        run_entry[\"fail_trace\"] = tb.format_exception(\n",
+    "            except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
+    "        )\n",
     "    save_json(s3_res, bucket_name, run_entry_key, \"run.json\", run_entry)"
    ]
   },
@@ -207,8 +208,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
-    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"FAILED\")\n",
+    "def tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, except_info):\n",
+    "    _tracking_event(\n",
+    "        s3_res, bucket_name, flow_base_key, flow_run_id, \"FAILED\", except_info\n",
+    "    )\n",
     "    print(f\"Flow tracking failed: {flow_run_id}\")"
    ]
   },
@@ -420,13 +423,17 @@
     "            self.run_entry,\n",
     "        )\n",
     "\n",
-    "    def complete_step_tracking(self):\n",
+    "    def complete_step_tracking(self, status=\"COMPLETED\", except_info=None):\n",
     "        self.run_entry[\"captured_out\"] = self.get_captured_out()\n",
     "        self.run_entry[\"result\"] = self.result\n",
     "        save_json(\n",
     "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
     "        )\n",
-    "        self.run_entry[\"status\"] = \"COMPLETED\"\n",
+    "        self.run_entry[\"status\"] = status\n",
+    "        if except_info is not None:\n",
+    "            self.run_entry[\"fail_trace\"] = tb.format_exception(\n",
+    "                except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
+    "            )\n",
     "        save_json(\n",
     "            self.s3_res,\n",
     "            self.bucket_name,\n",
@@ -453,7 +460,12 @@
     "            self.artifacts_key,\n",
     "            self.resource_key,\n",
     "            self.source_key,\n",
-    "        )"
+    "        )\n",
+    "\n",
+    "    def finish(self, status=\"COMPLETED\", except_info=None):\n",
+    "        self.stop_heartbeat()\n",
+    "        self.get_captured_out()\n",
+    "        self.complete_step_tracking(status)"
    ]
   },
   {
@@ -746,34 +758,53 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# slow\n",
     "\n",
-    "tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
     "\n",
-    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, step_name)\n",
+    "try:\n",
+    "    tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
     "\n",
-    "with tempfile.TemporaryDirectory() as temp_dir:\n",
-    "    with tracker.capture_out() as tracker._output_file:\n",
-    "        tracker.start_heartbeat(1.0)\n",
-    "        print(\"Some text\")\n",
-    "        time.sleep(2)\n",
-    "        tracker.log_metric(\"auroc\", 0.5, 0)\n",
-    "        csv_path = f\"{temp_dir}/testfile.csv\"\n",
-    "        df.to_csv(csv_path)\n",
-    "        time.sleep(2)\n",
-    "        tracker.add_artifact(csv_path)\n",
-    "        time.sleep(2)\n",
-    "        fig = df.a.plot.hist().figure\n",
-    "        png_path = f\"{temp_dir}/testfile.png\"\n",
-    "        fig.savefig(png_path)\n",
-    "        tracker.add_artifact(png_path)\n",
-    "        print(\"Some text\")\n",
-    "        tracker.stop_heartbeat()\n",
-    "        tracker.get_captured_out()\n",
-    "        tracker.complete_step_tracking()\n",
+    "    try:\n",
+    "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, step_name)\n",
+    "        with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "            with tracker.capture_out() as tracker._output_file:\n",
+    "                tracker.start_heartbeat(1.0)\n",
+    "                print(\"Some text\")\n",
+    "                time.sleep(2)\n",
+    "                tracker.log_metric(\"auroc\", 0.5, 0)\n",
+    "                csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "                df.to_csv(csv_path)\n",
+    "                time.sleep(2)\n",
+    "                tracker.add_artifact(csv_path)\n",
+    "                time.sleep(2)\n",
+    "                fig = df.a.plot.hist().figure\n",
+    "                png_path = f\"{temp_dir}/testfile.png\"\n",
+    "                fig.savefig(png_path)\n",
+    "                tracker.add_artifact(png_path)\n",
+    "                print(\"Some text\")\n",
+    "                tracker.finish()\n",
+    "    except BaseException:\n",
+    "        exc_type, exc_value, trace = sys.exc_info()\n",
+    "        except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "        tracker.finish(status=\"FAILED\", except_info=except_info)\n",
     "\n",
-    "tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "    tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "except (KeyboardInterrupt):\n",
+    "    tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "    print(f\"Flow interrupted by user: {flow_run_id}\")\n",
+    "except BaseException:\n",
+    "    exc_type, exc_value, trace = sys.exc_info()\n",
+    "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "    tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, except_info)\n",
+    "    print(f\"Flow failed: {flow_run_id}\")\n",
     "# Exception interrupt handling\n",
     "# Failure\n",
     "\n",
