Fixed bug in step out capturing

--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -82,6 +82,8 @@
     "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())}\"\n",
     "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
     "s3_res = boto3.resource(\"s3\")\n",
+    "steps = [\"experiment-test\"]\n",
+    "step_name = steps[0]\n",
     "flow_base_key"
    ]
   },
@@ -117,7 +119,9 @@
     "# export\n",
     "\n",
     "\n",
-    "def tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
+    "def tracking_started(\n",
+    "    s3_res, bucket_name, flow_base_key, flow_run_id, steps, params=None\n",
+    "):\n",
     "    # Create run-entry\n",
     "    # Write run.json\n",
     "    # experiment = experiment_info - sacred.ingredient.experiment_info\n",
@@ -134,7 +138,7 @@
     "        \"host\": host_info,\n",
     "        \"all_hosts\": {socket.gethostname(): host_info},\n",
     "        \"start_time\": time.time(),\n",
-    "        \"config\": {},\n",
+    "        \"config\": params,\n",
     "        \"meta\": {},\n",
     "        \"status\": \"RUNNING\",\n",
     "        \"resources\": [],\n",
@@ -142,6 +146,7 @@
     "        \"captured_out\": \"\",\n",
     "        \"info\": {},\n",
     "        \"heartbeat\": None,\n",
+    "        \"steps\": steps,\n",
     "    }\n",
     "\n",
     "    runs_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
@@ -156,7 +161,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id)"
+    "tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id, steps)"
    ]
   },
   {
@@ -317,6 +322,7 @@
     "        self.saved_metrics = {}\n",
     "        self.info = {}\n",
     "        self.result = None\n",
+    "        self.start_time = time.time()\n",
     "\n",
     "        self.flow_start_run_entry = load_json(\n",
     "            s3_res,\n",
@@ -423,13 +429,19 @@
     "            self.run_entry,\n",
     "        )\n",
     "\n",
-    "    def complete_step_tracking(self, status=\"COMPLETED\", except_info=None):\n",
-    "        self.run_entry[\"captured_out\"] = self.get_captured_out()\n",
+    "    def completed(self, status=\"COMPLETED\", except_info=None):\n",
+    "        self.stop_heartbeat()\n",
+    "        self.get_captured_out()\n",
+    "        self.run_entry[\"captured_out\"] = self.captured_out\n",
     "        self.run_entry[\"result\"] = self.result\n",
     "        save_json(\n",
     "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
     "        )\n",
     "        self.run_entry[\"status\"] = status\n",
+    "        self.run_entry[\"stop_time\"] = time.time()\n",
+    "        self.run_entry[\"elapsed_time\"] = round(\n",
+    "            self.run_entry[\"stop_time\"] - self.start_time, 2\n",
+    "        )\n",
     "        if except_info is not None:\n",
     "            self.run_entry[\"fail_trace\"] = tb.format_exception(\n",
     "                except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
@@ -460,12 +472,7 @@
     "            self.artifacts_key,\n",
     "            self.resource_key,\n",
     "            self.source_key,\n",
-    "        )\n",
-    "\n",
-    "    def finish(self, status=\"COMPLETED\", except_info=None):\n",
-    "        self.stop_heartbeat()\n",
-    "        self.get_captured_out()\n",
-    "        self.complete_step_tracking(status)"
+    "        )"
    ]
   },
   {
@@ -474,8 +481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "step_name = \"experiment-test\"\n",
-    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, step_name)"
+    "tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, steps[0])"
    ]
   },
   {
@@ -701,7 +707,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracker.complete_step_tracking()"
+    "tracker.completed()"
    ]
   },
   {
@@ -758,7 +764,43 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def first_step(tracker):\n",
+    "    print(\"Some text\")\n",
+    "    time.sleep(2)\n",
+    "    tracker.log_metric(\"auroc\", 0.5, 0)\n",
+    "    csv_path = f\"{temp_dir}/testfile.csv\"\n",
+    "    df.to_csv(csv_path)\n",
+    "    time.sleep(2)\n",
+    "    tracker.add_artifact(csv_path)\n",
+    "    time.sleep(2)\n",
+    "    fig = df.a.plot.hist().figure\n",
+    "    png_path = f\"{temp_dir}/testfile.png\"\n",
+    "    fig.savefig(png_path)\n",
+    "    tracker.add_artifact(png_path)\n",
+    "    print(\"Some text\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def second_step(tracker):\n",
+    "    print(\"More text\")\n",
+    "    time.sleep(2)\n",
+    "    tracker.log_metric(\"auroc\", 0.8, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "steps = [\"first_step\", \"second_step\"]"
+   ]
   },
   {
    "cell_type": "code",
@@ -770,31 +812,31 @@
     "\n",
     "\n",
     "try:\n",
-    "    tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "    tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id, steps)\n",
     "\n",
     "    try:\n",
-    "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, step_name)\n",
+    "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"first_step\")\n",
     "        with tempfile.TemporaryDirectory() as temp_dir:\n",
     "            with tracker.capture_out() as tracker._output_file:\n",
     "                tracker.start_heartbeat(1.0)\n",
-    "                print(\"Some text\")\n",
-    "                time.sleep(2)\n",
-    "                tracker.log_metric(\"auroc\", 0.5, 0)\n",
-    "                csv_path = f\"{temp_dir}/testfile.csv\"\n",
-    "                df.to_csv(csv_path)\n",
-    "                time.sleep(2)\n",
-    "                tracker.add_artifact(csv_path)\n",
-    "                time.sleep(2)\n",
-    "                fig = df.a.plot.hist().figure\n",
-    "                png_path = f\"{temp_dir}/testfile.png\"\n",
-    "                fig.savefig(png_path)\n",
-    "                tracker.add_artifact(png_path)\n",
-    "                print(\"Some text\")\n",
-    "                tracker.finish()\n",
+    "                first_step(tracker)\n",
+    "                tracker.completed()\n",
     "    except BaseException:\n",
     "        exc_type, exc_value, trace = sys.exc_info()\n",
     "        except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
-    "        tracker.finish(status=\"FAILED\", except_info=except_info)\n",
+    "        tracker.completed(status=\"FAILED\", except_info=except_info)\n",
+    "\n",
+    "    try:\n",
+    "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"second_step\")\n",
+    "        with tempfile.TemporaryDirectory() as temp_dir:\n",
+    "            with tracker.capture_out() as tracker._output_file:\n",
+    "                tracker.start_heartbeat(1.0)\n",
+    "                second_step(tracker)\n",
+    "                tracker.completed()\n",
+    "    except BaseException:\n",
+    "        exc_type, exc_value, trace = sys.exc_info()\n",
+    "        except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
+    "        tracker.completed(status=\"FAILED\", except_info=except_info)\n",
     "\n",
     "    tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
     "except (KeyboardInterrupt):\n",
@@ -806,7 +848,34 @@
     "    tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, except_info)\n",
     "    print(f\"Flow failed: {flow_run_id}\")\n",
     "# Exception interrupt handling\n",
-    "# Failure\n",
+    "# Failure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
+    "\n",
+    "run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
+    "run_entry = load_json(s3_res, bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
+    "first_step_entry = load_json(\n",
+    "    s3_res, bucket_name, s3_join(run_entry_key, \"step_first_step.json\")\n",
+    ")\n",
+    "second_step_entry = load_json(\n",
+    "    s3_res, bucket_name, s3_join(run_entry_key, \"step_second_step.json\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# slow\n",
     "\n",
     "delete_dir(s3_res, bucket_name, flow_base_key)"
    ]
@@ -817,9 +886,18 @@
    "source": [
     "# TODO\n",
     "\n",
-    "* Step elapsed time - create start time\n",
-    "* Merge all steps after flow completion - rewrite run.json"
+    "* Merge all steps after flow completion - rewrite run.json\n",
+    "    * all_hosts\n",
+    "    * captured_out\n",
+    "    * steps"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
