Added merge of step entries

--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "import datetime\n",
     "import json\n",
-    "import socket\n",
+    "import sys\n",
     "import tempfile\n",
     "import time\n",
     "import traceback as tb\n",
@@ -136,7 +136,6 @@
     "        \"format\": None,\n",
     "        \"command\": None,\n",
     "        \"host\": host_info,\n",
-    "        \"all_hosts\": {socket.gethostname(): host_info},\n",
     "        \"start_time\": time.time(),\n",
     "        \"config\": params,\n",
     "        \"meta\": {},\n",
@@ -173,8 +172,46 @@
     "# export\n",
     "\n",
     "\n",
+    "def merge_step_entries(s3_res, bucket_name, run_entry_key, run_entry):\n",
+    "    all_hosts = {}\n",
+    "    captured_out = \"\"\n",
+    "    step_entries = {}\n",
+    "    for step in steps:\n",
+    "        step_entry = load_json(\n",
+    "            s3_res, bucket_name, s3_join(run_entry_key, f\"step_{step}.json\")\n",
+    "        )\n",
+    "        all_hosts[step] = step_entry[\"host\"]\n",
+    "        step_out = (\n",
+    "            \"\" if step_entry[\"captured_out\"] is None else step_entry[\"captured_out\"]\n",
+    "        )\n",
+    "        captured_out += f\"******BEGIN step: {step}******\\n\"\n",
+    "        captured_out += step_out\n",
+    "        captured_out += f\"******END step: {step}******\\n\"\n",
+    "        step_entries[step] = step_entry\n",
+    "    run_entry[\"all_hosts\"] = all_hosts\n",
+    "    run_entry[\"captured_out\"] = captured_out\n",
+    "    run_entry[\"steps\"] = steps\n",
+    "    run_entry[\"step_entries\"] = step_entries\n",
+    "    return run_entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# export\n",
+    "\n",
+    "\n",
     "def _tracking_event(\n",
-    "    s3_res, bucket_name, flow_base_key, flow_run_id, event_status, except_info=None\n",
+    "    s3_res,\n",
+    "    bucket_name,\n",
+    "    flow_base_key,\n",
+    "    flow_run_id,\n",
+    "    event_status,\n",
+    "    steps,\n",
+    "    except_info=None,\n",
     "):\n",
     "    run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
     "    run_entry = load_json(s3_res, bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
@@ -187,6 +224,8 @@
     "        run_entry[\"fail_trace\"] = tb.format_exception(\n",
     "            except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
     "        )\n",
+    "\n",
+    "    run_entry = merge_step_entries(s3_res, bucket_name, run_entry_key, run_entry)\n",
     "    save_json(s3_res, bucket_name, run_entry_key, \"run.json\", run_entry)"
    ]
   },
@@ -199,8 +238,10 @@
     "# export\n",
     "\n",
     "\n",
-    "def tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
-    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"INTERRUPTED\")\n",
+    "def tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id, steps):\n",
+    "    _tracking_event(\n",
+    "        s3_res, bucket_name, flow_base_key, flow_run_id, \"INTERRUPTED\", steps\n",
+    "    )\n",
     "    print(f\"Flow tracking interrupted: {flow_run_id}\")"
    ]
   },
@@ -213,9 +254,11 @@
     "# export\n",
     "\n",
     "\n",
-    "def tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, except_info):\n",
+    "def tracking_failed(\n",
+    "    s3_res, bucket_name, flow_base_key, flow_run_id, except_info, steps\n",
+    "):\n",
     "    _tracking_event(\n",
-    "        s3_res, bucket_name, flow_base_key, flow_run_id, \"FAILED\", except_info\n",
+    "        s3_res, bucket_name, flow_base_key, flow_run_id, \"FAILED\", steps, except_info\n",
     "    )\n",
     "    print(f\"Flow tracking failed: {flow_run_id}\")"
    ]
@@ -229,8 +272,8 @@
     "# export\n",
     "\n",
     "\n",
-    "def tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id):\n",
-    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"COMPLETED\")\n",
+    "def tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id, steps):\n",
+    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"COMPLETED\", steps)\n",
     "    print(f\"Flow tracking completed: {flow_run_id}\")"
    ]
   },
@@ -330,7 +373,6 @@
     "            s3_join(self.exp_base_key, \"runs\", \"flow_start_run.json\"),\n",
     "        )\n",
     "        self.run_entry = self.flow_start_run_entry\n",
-    "        self.run_entry[\"all_hosts\"][socket.gethostname()] = get_host_info()\n",
     "\n",
     "        if region is not None:\n",
     "            self.region = region\n",
@@ -442,6 +484,7 @@
     "        self.run_entry[\"elapsed_time\"] = round(\n",
     "            self.run_entry[\"stop_time\"] - self.start_time, 2\n",
     "        )\n",
+    "        self.run_entry[\"host\"] = get_host_info()\n",
     "        if except_info is not None:\n",
     "            self.run_entry[\"fail_trace\"] = tb.format_exception(\n",
     "                except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
@@ -729,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)"
+    "tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id, steps)"
    ]
   },
   {
@@ -838,14 +881,14 @@
     "        except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
     "        tracker.completed(status=\"FAILED\", except_info=except_info)\n",
     "\n",
-    "    tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "    tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id, steps)\n",
     "except (KeyboardInterrupt):\n",
-    "    tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id)\n",
+    "    tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id, steps)\n",
     "    print(f\"Flow interrupted by user: {flow_run_id}\")\n",
     "except BaseException:\n",
     "    exc_type, exc_value, trace = sys.exc_info()\n",
     "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
-    "    tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, except_info)\n",
+    "    tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, steps, except_info)\n",
     "    print(f\"Flow failed: {flow_run_id}\")\n",
     "# Exception interrupt handling\n",
     "# Failure"
@@ -879,25 +922,6 @@
     "\n",
     "delete_dir(s3_res, bucket_name, flow_base_key)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# TODO\n",
-    "\n",
-    "* Merge all steps after flow completion - rewrite run.json\n",
-    "    * all_hosts\n",
-    "    * captured_out\n",
-    "    * steps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
