Moved flow tracking to a class rather than functions

--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -78,8 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_base_key = \"sciflow-testing-unlikely-key\"\n",
-    "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())}\"\n",
+    "today = datetime.datetime.utcnow().strftime(\"%Y%m%d\")\n",
+    "flow_base_key = f\"sciflow-experiment-testing-{today}\"\n",
+    "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
     "flow_run_key = s3_join(flow_base_key, flow_run_id)\n",
     "s3_res = boto3.resource(\"s3\")\n",
     "steps = [\"experiment-test\"]\n",
@@ -94,6 +95,7 @@
    "outputs": [],
    "source": [
     "# export\n",
+    "# TODO replace the sacred flatten function and mvoe to s3_utils - needs a jsonpickle serialiser\n",
     "\n",
     "\n",
     "def save_json(s3_res, bucket_name, key, filename, obj):\n",
@@ -104,10 +106,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# Flow-level"
+    "# Create run-entry\n",
+    "# Write run.json\n",
+    "# experiment = experiment_info - sacred.ingredient.experiment_info\n",
+    "# Command = run_flow?\n",
+    "# Config = params?\n",
+    "# meta = startup metadata put in FlowTracker"
    ]
   },
   {
@@ -119,114 +128,114 @@
     "# export\n",
     "\n",
     "\n",
-    "def tracking_started(\n",
-    "    s3_res, bucket_name, flow_base_key, flow_run_id, steps, params=None\n",
-    "):\n",
-    "    # Create run-entry\n",
-    "    # Write run.json\n",
-    "    # experiment = experiment_info - sacred.ingredient.experiment_info\n",
-    "    # Command = run_flow?\n",
-    "    # Config = params?\n",
-    "    # meta = startup metadata put in FlowTracker\n",
+    "class FlowTracker:\n",
+    "    def __init__(\n",
+    "        self, bucket_name, flow_base_key, flow_run_id, steps, region=\"eu-west-1\"\n",
+    "    ):\n",
+    "        self.bucket_name = bucket_name\n",
+    "        self.flow_base_key = flow_base_key\n",
+    "        self.flow_run_id = flow_run_id\n",
+    "        self.steps = steps\n",
     "\n",
-    "    host_info = get_host_info()\n",
-    "    run_entry = {\n",
-    "        \"experiment_id\": flow_run_id,\n",
-    "        \"experiment\": {},\n",
-    "        \"format\": None,\n",
-    "        \"command\": None,\n",
-    "        \"host\": host_info,\n",
-    "        \"start_time\": time.time(),\n",
-    "        \"config\": params,\n",
-    "        \"meta\": {},\n",
-    "        \"status\": \"RUNNING\",\n",
-    "        \"resources\": [],\n",
-    "        \"artifacts\": [],\n",
-    "        \"captured_out\": \"\",\n",
-    "        \"info\": {},\n",
-    "        \"heartbeat\": None,\n",
-    "        \"steps\": steps,\n",
-    "    }\n",
+    "        if region is not None:\n",
+    "            self.region = region\n",
+    "            self.s3_res = boto3.resource(\"s3\", region_name=region)\n",
+    "        else:\n",
+    "            session = boto3.session.Session()\n",
+    "            if session.region_name is not None:\n",
+    "                self.region = session.region_name\n",
+    "                self.s3 = boto3.resource(\"s3\")\n",
+    "            else:\n",
+    "                raise ValueError(\n",
+    "                    \"You must either pass in an AWS region name, or have a \"\n",
+    "                    \"region name specified in your AWS config file\"\n",
+    "                )\n",
     "\n",
-    "    runs_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
-    "    save_json(s3_res, bucket_name, runs_key, \"run.json\", run_entry)\n",
-    "    save_json(s3_res, bucket_name, runs_key, \"flow_start_run.json\", run_entry)\n",
-    "    print(f\"Started tracking flow: {flow_run_id}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id, steps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
+    "        self.run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
+    "        self.metrics_table_key = s3_join(flow_base_key, \"metrics\", flow_run_id)\n",
+    "        self.runs_table_key = s3_join(flow_base_key, \"runs\", flow_run_id)\n",
+    "        self.artifacts_table_key = s3_join(flow_base_key, \"artifacts\", flow_run_id)\n",
     "\n",
+    "    def start(self, params=None):\n",
+    "        host_info = get_host_info()\n",
+    "        run_entry = {\n",
+    "            \"experiment_id\": flow_run_id,\n",
+    "            \"experiment\": {},\n",
+    "            \"format\": None,\n",
+    "            \"command\": None,\n",
+    "            \"host\": host_info,\n",
+    "            \"start_time\": time.time(),\n",
+    "            \"config\": params,\n",
+    "            \"meta\": {},\n",
+    "            \"status\": \"RUNNING\",\n",
+    "            \"resources\": [],\n",
+    "            \"artifacts\": [],\n",
+    "            \"captured_out\": \"\",\n",
+    "            \"info\": {},\n",
+    "            \"heartbeat\": None,\n",
+    "            \"steps\": steps,\n",
+    "        }\n",
     "\n",
-    "def merge_step_entries(s3_res, bucket_name, run_entry_key, run_entry):\n",
-    "    all_hosts = {}\n",
-    "    captured_out = \"\"\n",
-    "    step_entries = {}\n",
-    "    for step in steps:\n",
-    "        step_entry = load_json(\n",
-    "            s3_res, bucket_name, s3_join(run_entry_key, f\"step_{step}.json\")\n",
+    "        save_json(s3_res, bucket_name, self.run_entry_key, \"run.json\", run_entry)\n",
+    "        save_json(\n",
+    "            s3_res, bucket_name, self.run_entry_key, \"flow_start_run.json\", run_entry\n",
     "        )\n",
-    "        all_hosts[step] = step_entry[\"host\"]\n",
-    "        step_out = (\n",
-    "            \"\" if step_entry[\"captured_out\"] is None else step_entry[\"captured_out\"]\n",
+    "        save_json(s3_res, bucket_name, self.runs_table_key, \"run.json\", run_entry)\n",
+    "        print(f\"Started tracking flow: {flow_run_id}\")\n",
+    "\n",
+    "    def interrupted(self):\n",
+    "        self._tracking_event(\"INTERRUPTED\")\n",
+    "        print(f\"Flow tracking interrupted: {flow_run_id}\")\n",
+    "\n",
+    "    def failed(self, except_info):\n",
+    "        self._tracking_event(\"FAILED\", except_info)\n",
+    "        print(f\"Flow tracking failed: {flow_run_id}\")\n",
+    "\n",
+    "    def completed(self):\n",
+    "        self._tracking_event(\"COMPLETED\")\n",
+    "        print(f\"Flow tracking completed: {flow_run_id}\")\n",
+    "\n",
+    "    def _tracking_event(self, event_status, except_info=None):\n",
+    "        run_entry = load_json(\n",
+    "            self.s3_res, self.bucket_name, s3_join(self.run_entry_key, \"run.json\")\n",
     "        )\n",
-    "        captured_out += f\"******BEGIN step: {step}******\\n\"\n",
-    "        captured_out += step_out\n",
-    "        captured_out += f\"******END step: {step}******\\n\"\n",
-    "        step_entries[step] = step_entry\n",
-    "    run_entry[\"all_hosts\"] = all_hosts\n",
-    "    run_entry[\"captured_out\"] = captured_out\n",
-    "    run_entry[\"steps\"] = steps\n",
-    "    run_entry[\"step_entries\"] = step_entries\n",
-    "    return run_entry"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def _tracking_event(\n",
-    "    s3_res,\n",
-    "    bucket_name,\n",
-    "    flow_base_key,\n",
-    "    flow_run_id,\n",
-    "    event_status,\n",
-    "    steps,\n",
-    "    except_info=None,\n",
-    "):\n",
-    "    run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
-    "    run_entry = load_json(s3_res, bucket_name, s3_join(run_entry_key, \"run.json\"))\n",
-    "    run_entry[\"status\"] = event_status\n",
-    "    run_entry[\"stop_time\"] = time.time()\n",
-    "    run_entry[\"elapsed_time\"] = round(\n",
-    "        run_entry[\"stop_time\"] - run_entry[\"start_time\"], 2\n",
-    "    )\n",
-    "    if except_info is not None:\n",
-    "        run_entry[\"fail_trace\"] = tb.format_exception(\n",
-    "            except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
+    "        run_entry[\"status\"] = event_status\n",
+    "        run_entry[\"stop_time\"] = time.time()\n",
+    "        run_entry[\"elapsed_time\"] = round(\n",
+    "            run_entry[\"stop_time\"] - run_entry[\"start_time\"], 2\n",
     "        )\n",
+    "        if except_info is not None:\n",
+    "            run_entry[\"fail_trace\"] = tb.format_exception(\n",
+    "                except_info[\"exc_type\"], except_info[\"exc_value\"], except_info[\"trace\"]\n",
+    "            )\n",
     "\n",
-    "    run_entry = merge_step_entries(s3_res, bucket_name, run_entry_key, run_entry)\n",
-    "    save_json(s3_res, bucket_name, run_entry_key, \"run.json\", run_entry)"
+    "        run_entry = self._merge_step_entries(run_entry)\n",
+    "        save_json(s3_res, bucket_name, self.run_entry_key, \"run.json\", run_entry)\n",
+    "        save_json(s3_res, bucket_name, self.runs_table_key, \"run.json\", run_entry)\n",
+    "\n",
+    "    def _merge_step_entries(self, run_entry):\n",
+    "        all_hosts = {}\n",
+    "        captured_out = \"\"\n",
+    "        step_entries = {}\n",
+    "        for step in steps:\n",
+    "            step_entry = load_json(\n",
+    "                self.s3_res,\n",
+    "                self.bucket_name,\n",
+    "                s3_join(self.run_entry_key, f\"step_{step}.json\"),\n",
+    "            )\n",
+    "            all_hosts[step] = step_entry[\"host\"]\n",
+    "            step_out = (\n",
+    "                \"\" if step_entry[\"captured_out\"] is None else step_entry[\"captured_out\"]\n",
+    "            )\n",
+    "            captured_out += f\"******BEGIN step: {step}******\\n\"\n",
+    "            captured_out += step_out\n",
+    "            captured_out += f\"******END step: {step}******\\n\"\n",
+    "            step_entries[step] = step_entry\n",
+    "        run_entry[\"all_hosts\"] = all_hosts\n",
+    "        run_entry[\"captured_out\"] = captured_out\n",
+    "        run_entry[\"steps\"] = steps\n",
+    "        run_entry[\"step_entries\"] = step_entries\n",
+    "        return run_entry"
    ]
   },
   {
@@ -235,14 +244,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id, steps):\n",
-    "    _tracking_event(\n",
-    "        s3_res, bucket_name, flow_base_key, flow_run_id, \"INTERRUPTED\", steps\n",
-    "    )\n",
-    "    print(f\"Flow tracking interrupted: {flow_run_id}\")"
+    "flow_tracker = FlowTracker(bucket_name, flow_base_key, flow_run_id, steps)"
    ]
   },
   {
@@ -251,30 +253,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def tracking_failed(\n",
-    "    s3_res, bucket_name, flow_base_key, flow_run_id, except_info, steps\n",
-    "):\n",
-    "    _tracking_event(\n",
-    "        s3_res, bucket_name, flow_base_key, flow_run_id, \"FAILED\", steps, except_info\n",
-    "    )\n",
-    "    print(f\"Flow tracking failed: {flow_run_id}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# export\n",
-    "\n",
-    "\n",
-    "def tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id, steps):\n",
-    "    _tracking_event(s3_res, bucket_name, flow_base_key, flow_run_id, \"COMPLETED\", steps)\n",
-    "    print(f\"Flow tracking completed: {flow_run_id}\")"
+    "flow_tracker.start()"
    ]
   },
   {
@@ -690,16 +669,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mock tracker in user mode\n",
-    "# running in a flow??"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -772,7 +741,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id, steps)"
+    "flow_tracker.completed()"
    ]
   },
   {
@@ -853,9 +822,10 @@
    "source": [
     "# slow\n",
     "\n",
+    "flow_tracker = FlowTracker(bucket_name, flow_base_key, flow_run_id, steps)\n",
     "\n",
     "try:\n",
-    "    tracking_started(s3_res, bucket_name, flow_base_key, flow_run_id, steps)\n",
+    "    flow_tracker.start()\n",
     "\n",
     "    try:\n",
     "        tracker = StepTracker(bucket_name, flow_base_key, flow_run_id, \"first_step\")\n",
@@ -881,14 +851,14 @@
     "        except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
     "        tracker.completed(status=\"FAILED\", except_info=except_info)\n",
     "\n",
-    "    tracking_completed(s3_res, bucket_name, flow_base_key, flow_run_id, steps)\n",
+    "    flow_tracker.completed()\n",
     "except (KeyboardInterrupt):\n",
-    "    tracking_interrupted(s3_res, bucket_name, flow_base_key, flow_run_id, steps)\n",
+    "    flow_tracker.interrupted()\n",
     "    print(f\"Flow interrupted by user: {flow_run_id}\")\n",
     "except BaseException:\n",
     "    exc_type, exc_value, trace = sys.exc_info()\n",
     "    except_info = {\"exc_type\": exc_type, \"exc_value\": exc_value, \"trace\": trace}\n",
-    "    tracking_failed(s3_res, bucket_name, flow_base_key, flow_run_id, steps, except_info)\n",
+    "    flow_tracker.failed(except_info)\n",
     "    print(f\"Flow failed: {flow_run_id}\")\n",
     "# Exception interrupt handling\n",
     "# Failure"
