--- a/nbs/tracking.ipynb
+++ b/nbs/tracking.ipynb
@@ -58,7 +58,7 @@
     "from sacred.stdout_capturing import get_stdcapturer\n",
     "from sacred.utils import IntervalTimer\n",
     "\n",
-    "from sciflow.s3_utils import delete_dir, list_bucket, load_json, put_data, s3_join\n",
+    "from sciflow.s3_utils import list_bucket, load_json, put_data, s3_join\n",
     "from sciflow.utils import prepare_env"
    ]
   },
@@ -152,9 +152,7 @@
     "                )\n",
     "\n",
     "        self.run_entry_key = s3_join(flow_base_key, flow_run_id, \"experiment\", \"runs\")\n",
-    "        self.metrics_table_key = s3_join(flow_base_key, \"metrics\", flow_run_id)\n",
-    "        self.runs_table_key = s3_join(flow_base_key, \"runs\", flow_run_id)\n",
-    "        self.artifacts_table_key = s3_join(flow_base_key, \"artifacts\", flow_run_id)\n",
+    "        self.runs_table_key = s3_join(flow_base_key, \"experiments\", \"runs\", flow_run_id)\n",
     "\n",
     "    def start(self, params=None):\n",
     "        host_info = get_host_info()\n",
@@ -417,10 +415,18 @@
     "            \"metrics.json\",\n",
     "            self.saved_metrics,\n",
     "        )\n",
+    "        save_json(\n",
+    "            self.s3_res,\n",
+    "            self.bucket_name,\n",
+    "            self.metrics_table_key,\n",
+    "            \"metrics.json\",\n",
+    "            self.saved_metrics,\n",
+    "        )\n",
     "\n",
     "    def add_artifact(self, artifact_path):\n",
     "        name = Path(artifact_path).name\n",
     "        self.save_file(self.artifacts_key, artifact_path, name)\n",
+    "        self.save_file(self.artifacts_table_key, artifact_path, name)\n",
     "        self.run_entry[\"artifacts\"].append(name)\n",
     "        save_json(\n",
     "            self.s3_res, self.bucket_name, self.runs_key, \"run.json\", self.run_entry\n",
@@ -487,6 +493,12 @@
     "        self.artifacts_key = s3_join(self.exp_base_key, \"artifacts\")\n",
     "        self.resource_key = s3_join(self.exp_base_key, \"resources\")\n",
     "        self.source_key = s3_join(self.exp_base_key, \"sources\")\n",
+    "        self.metrics_table_key = s3_join(\n",
+    "            self.flow_base_key, \"experiments\", \"metrics\", flow_run_id\n",
+    "        )\n",
+    "        self.artifacts_table_key = s3_join(\n",
+    "            self.flow_base_key, \"experiments\", \"artifacts\", flow_run_id\n",
+    "        )\n",
     "\n",
     "        self.keys = (\n",
     "            self.runs_key,\n",
@@ -761,7 +773,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "delete_dir(s3_res, bucket_name, flow_base_key)"
+    "artifacts = [\n",
+    "    \"testfile.csv\",\n",
+    "    \"testfile.txt\",\n",
+    "    \"testfile.png\",\n",
+    "    \"testfile.pdf\",\n",
+    "    \"testfile.pkl\",\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check artifacts exist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check metrics logged"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "captured_out = \"\"\"******BEGIN step: experiment-test******\\n\n",
+    "Starting Heartbeat\\n\n",
+    "Some text\\n\n",
+    "Emitted heartbeat at: 2022-06-09T11:40:25.112986\\n\n",
+    "Emitted heartbeat at: 2022-06-09T11:40:26.223391\\n\n",
+    "Some text\\n\n",
+    "Stopping Heartbeat\\n\n",
+    "Emitted heartbeat at: 2022-06-09T11:40:27.116552\\n\n",
+    "******END step: experiment-test******\\n\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# has a positive long stop time\n",
+    "# has a positive float elapsed_time\n",
+    "# has an all_hosts entry with len 1\n",
+    "# caputed out has beginning & end text and 2 Some texts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# run_entry"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# delete_dir(s3_res, bucket_name, flow_base_key)"
    ]
   },
   {
@@ -812,6 +895,16 @@
    "outputs": [],
    "source": [
     "steps = [\"first_step\", \"second_step\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flow_run_id = f\"sample_flow_instance_{str(uuid.uuid4())[-6:]}\"\n",
+    "flow_run_key = s3_join(flow_base_key, flow_run_id)"
    ]
   },
   {
@@ -890,7 +983,7 @@
    "source": [
     "# slow\n",
     "\n",
-    "delete_dir(s3_res, bucket_name, flow_base_key)"
+    "# delete_dir(s3_res, bucket_name, flow_base_key)"
    ]
   }
  ],
